Fixed Settings ScrollBar, Theme Consistency...
[Changelog]
- Fixed issue where native scrollbar would show in settings
- Made all buttons consistent on settingsbar in reader

--- a/src/routes/Reader/SettingsBar/FontsContainerV2/FontsContainer.module.scss
+++ b/src/routes/Reader/SettingsBar/FontsContainerV2/FontsContainer.module.scss
@@ -52,20 +52,17 @@
 }
 .resizeContainer{
   display:flex;
-  width: calc(82px * 0.75);
+  width: calc(48px * 0.75);
   height: calc(48px * 0.75);
   font-weight: bold;
   border: 1px solid #9A9A9A;
-  border-radius: 5px;
+  border-radius: 100%;
   justify-content: center;
   align-items: center;
   font-size: 18px;
   cursor:pointer;
 }
-  
-.largeText{
-  font-size: 36px;
-}
+
   
 .resizeSize{
   width: 50px;
