--- a/src/routes/Reader/SettingsBar/SpacingContainer/SpacingContainer.module.scss
+++ b/src/routes/Reader/SettingsBar/SpacingContainer/SpacingContainer.module.scss
@@ -23,7 +23,7 @@
   height: calc(48px * 0.75);
   font-weight: bold;
   border: 1px solid var(--text-secondary);
-  border-radius: 5px;
+  border-radius: 100%;
   justify-content: center;
   align-items: center;
   font-size: 18px;
