--- a/src/routes/Settings/Settings.module.scss
+++ b/src/routes/Settings/Settings.module.scss
@@ -47,7 +47,7 @@
   height: 100%;
   display:flex;
   flex-direction: column;
-    
+  overflow: hidden;
 }
 
 
@@ -118,4 +118,5 @@
 .contentContainer{
   grid-row: 1/1;
   grid-column: 2/3;
+  overflow:scroll;
 }
